--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,11 @@
     text-align: center;
     padding-top: 50px;
 }
+.services{
+    height: 400px;
+    background: url(../images/backgrounds/s_image.jpg);
+    background-size: contain;
+    color: white;
+    padding: 100px;
+    text-align: center;
+}
