--- a/css/styles.css
+++ b/css/styles.css
@@ -87,3 +87,10 @@ figcaption{
     
     background-color:gray;
 }
+.social-icons{
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.social-icons img{
+    margin-right: 20px;
+}
