--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@ h1{
     font-family: 'Lacquer';
     
 }
+.home h1{
+    position: relative;
+}
 p{
    font-family:'Indie Flower';
    font-size: large;
@@ -55,10 +58,18 @@ figcaption{
  
  .col-md-3 img{
      
-     margin: 20px;
+     
      width: 100%;
+     padding-right: 20px;
+     
      
  }
+ .col-md-3 .hide{
+     
+    
+    width: 80%;
+    
+}
 .portfolio{
     margin-top: 50px;
 }
@@ -75,7 +86,7 @@ figcaption{
     
 }
 
-#message{
+#mce-MESSAGE{
     width: 90%;
     height: 300px;
     margin:auto;
@@ -84,7 +95,7 @@ figcaption{
     word-wrap: break-word;
     border: white solid 1px;
 }
-#email,#name{
+#mce-EMAIL,#mce-FNAME{
     width: 90%;
     margin: auto;
     background: transparent;
@@ -133,27 +144,81 @@ figcaption{
 .service-icons h4{
     font-weight: bold;
 }
+
 #portfolio-container .hide{
     
     
     color: black;
     text-align: center;
     margin: 20px;
-    width: 100%;
+    /*width: 100%;
     height: 85%;
-    padding: 20px;
-    border: white solid;
+    padding: 20px;*/
+    
     background-size:contain;
+    opacity: 0.6;
+
+    
 }
+
 .hide h1{
-   background-color: white;
-   opacity: 0.6;
-   width: 100%;
-   height: 100%;
-   font-weight: bolder;
-   margin: auto;
+    background-color: white;
+    opacity: 0.8;
+    margin-left: 120px;
+    width: 90%;
+    height: 150px;
+    font-weight: bolder;
+    color: blue;
+   
+}
+
+.row{
+    position: relative;
 
 }
+
+#row-1{
+    padding-bottom: 250px;
+
+}
+#c1,#c2,#c3,#c4,#c5,#c6,#c7,#c8{
+    position: relative; 
+
+}
+
+#c1 img,h1{
+    position: absolute;
+         
+}
+#c2 img,h1{
+    position: absolute;
+        
+}
+#c3 img,h1{
+    position: absolute;
+        
+}
+#c4 img,h1{
+    position: absolute;
+         
+}
+#c5 img,h1{
+    position: absolute;
+        
+}
+#c6 img,h1{
+    position: absolute;
+        
+}
+#c7 img,h1{
+    position: absolute;
+         
+}
+#c8 img,h1{
+    position: absolute;
+        
+}
+
 
 @media only screen and (max-width:800px) {
     /* For tablets: */
